<resources>
    <string name="app_name">GitHubApp</string>
    <string name="text_hint_editText">Personal access token</string>
    <string name="text_signIn_button">SIGN IN</string>
    <string name="text_exception_wrong_token">Invalid token</string>
    <string name="text_exception_empty_field">Enter the token</string>
    <string name="text_exception_check_internet_connection">Check your Internet connection</string>
    <string name="text_exception_cannot_open">Cannot open</string>
    <string name="text_exception_server_not_responding">Server Not Responding</string>
    <string name="text_exception_unknown">Unknown error</string>
    <string name="description">Description</string>
    <string name="text_connection_error">Connection error</string>
    <string name="text_empty">Empty</string>
    <string name="text_no_repositories_at_the_moment">No repositories at the moment</string>
    <string name="text_refresh">REFRESH</string>
    <string name="text_retry">RETRY</string>
    <string name="text_something_error">Something error</string>
    <string name="text_check_your_something">Check your something</string>
    <string name="link">link</string>
    <string name="text_license">License</string>
    <string name="some_license">Some license</string>
    <string name="_0">0</string>
    <string name="text_stars">stars</string>
    <string name="text_forks">forks</string>
    <string name="watchers">watchers</string>
    <string name="repository_description">Repository description</string>
    <string name="language">Language</string>
    <string name="repository_name">Repository name</string>
    <string name="text_repositories">Repositories</string>
    <string name="repo_name">Repository name</string>
    <string name="text_dialog_title">Error</string>
    <string name="text_possible_button">OK</string>
    <string name="no_readme">No README.md</string>
</resources>