<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="15dp"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/text_view_repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/blue"
        android:text="@string/repository_name" />

    <TextView
        android:id="@+id/text_view_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/yellow"
        android:text="@string/language"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/flow_recycler_item"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/repository_description"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_recycler_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:flow_wrapMode="chain"
        app:flow_horizontalBias="0"
        app:flow_horizontalStyle="spread_inside"
        app:constraint_referenced_ids="text_view_repo_name, text_view_language"/>
</androidx.constraintlayout.widget.ConstraintLayout>