<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.DetailFragment">

    <ScrollView
        android:id="@+id/scrollView_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--start link block-->
            <ImageView
                android:id="@+id/image_view_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:contentDescription="@string/description"
                android:src="@drawable/ic_link"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_link"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_view_link" />

            <TextView
                android:id="@+id/text_view_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="24dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/link"
                android:textColor="@color/blue"
                app:layout_constraintStart_toEndOf="@+id/image_view_link"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <!--end link block -->

            <!--start license block-->
            <ImageView
                android:id="@+id/image_view_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_license"
                app:layout_constraintStart_toStartOf="@id/image_view_link"
                app:layout_constraintTop_toTopOf="@id/text_view_license"
                app:layout_constraintBottom_toBottomOf="@id/text_view_license"
                android:contentDescription="@string/description"/>

            <TextView
                android:id="@+id/text_view_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintLeft_toLeftOf="@id/text_view_link"
                app:layout_constraintTop_toBottomOf="@id/text_view_link"
                android:layout_marginTop="27dp"
                android:text="@string/text_license"/>

            <TextView
                android:id="@+id/text_view_nameOf_license"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:layout_marginEnd="32dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/some_license"
                app:layout_constraintTop_toTopOf="@id/text_view_license"
                app:layout_constraintBottom_toBottomOf="@id/text_view_license"
                app:layout_constraintRight_toRightOf="parent" />
            <!--end license block-->

            <!--start stars block-->
            <TextView
                android:id="@+id/text_view_count_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textSize="@dimen/small_text_size"
                android:text="@string/_0"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_star"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_view_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:text="@string/text_stars"
                tools:ignore="MissingConstraints"/>
            <!--end stars block-->

            <!--start fork block-->
            <TextView
                android:id="@+id/text_view_count_forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_green"
                android:textSize="@dimen/small_text_size"
                android:drawableStart="@drawable/ic_fork"
                android:text="@string/_0"
                android:drawablePadding="5dp"
                app:drawableStartCompat="@drawable/ic_fork"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_view_forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:text="@string/text_forks"
                tools:ignore="MissingConstraints"/>
            <!--end fork block-->

            <!--start watchers block-->
            <TextView
                android:id="@+id/text_view_count_watchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/small_text_size"
                android:drawableStart="@drawable/ic_watchers"
                android:text="@string/_0"
                android:drawablePadding="5dp"
                app:drawableStartCompat="@drawable/ic_watchers"
                tools:ignore="MissingConstraints"/>

            <TextView
                android:id="@+id/text_view_watchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:layout_marginStart="5dp"
                android:text="@string/watchers"
                tools:ignore="MissingConstraints"/>
            <!--end watchers block-->

            <br.tiagohm.markdownview.MarkdownView
                android:id="@+id/markdown_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flow_detail"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginHorizontal="-35dp"/>

            <ProgressBar
                android:id="@+id/progress_readme"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:indeterminateTint="@color/white"
                android:layout_marginTop="26dp"
                app:layout_constraintTop_toBottomOf="@id/flow_detail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:indeterminate="true"
                android:visibility="gone"/>

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:flow_wrapMode="chain"
                app:flow_horizontalStyle="spread_inside"
                app:flow_horizontalBias="0"
                app:flow_horizontalGap="5dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="26dp"
                app:constraint_referenced_ids="text_view_count_stars, text_view_stars, text_view_count_forks, text_view_forks, text_view_count_watchers, text_view_watchers"
                app:layout_constraintTop_toBottomOf="@id/image_view_license"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/loading_detail"
        layout="@layout/loading_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/scrollView_detail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <include
        android:id="@+id/connection_error_detail"
        layout="@layout/connection_error_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/scrollView_detail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>