<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.fragments.AuthFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_auth">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="126dp"
                android:layout_height="126dp"
                android:layout_marginTop="33dp"
                android:src="@drawable/ic_main_logo"
                android:contentDescription="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/text_hint_editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                android:inputType="textUri"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                style="@style/TextInputLayoutColors">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_token"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/main_background"
                    android:textColor="@color/white"
                    android:inputType="textUri"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/text_signIn_button"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_auth"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button_auth"
        app:layout_constraintEnd_toEndOf="@+id/button_auth"
        app:layout_constraintStart_toStartOf="@+id/button_auth"
        app:layout_constraintTop_toTopOf="@+id/button_auth"
        android:indeterminateOnly="true"
        android:elevation="10dp"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>